data/all_generated_tests/raw_wast_tests/br_StackCorruption_259.wast
;; 10. **Test 10: Nested Control Structures with Parallel Branches**    - Nested control structures (`block`, `loop`, `if`) with multiple `br` instructions targeting the same level from different paths.    - Constraint: Ensure that simultaneous branches to the same target label are handled correctly.    - Stack Corruption Check: Validate that parallel branches maintain stack integrity without causing inconsistencies.

(assert_invalid
  (module
    (func
      (block (result i32)
        (block
          (if (i32.const 1)
            (then (br 1))
            (else (br 0))
          )
        )
        (i32.const 0)
      )
    )
  )
  "type mismatch"
)